--- a/index.html
+++ b/index.html
@@ -111,18 +111,18 @@
   <div class="dropdown-container" id="dropdownContainer">
     <select id="managerDropdown" onchange="updateClockName()">
       <option disabled selected>Select manager</option>
-      <option>Justin McCartney (Shrek's New Favorite)</option>
-      <option>Ryan McCartney (Kitty J. Kat)</option>
-      <option>Timmy Lesso (Third Street Legends)</option>
-      <option>Seth Janov (Chartiers-Houston)</option>
-      <option>Alex Kobert</option>
-      <option>Alex Gennuso (Juice)</option>
-      <option>Brian Fyola</option>
-      <option>Jimmy (Jimbo)</option>
+      <option>Justin</option>
+      <option>Ryan</option>
+      <option>Timmy</option>
+      <option>Seth</option>
+      <option>Alex K</option>
+      <option>Juice</option>
+      <option>Fyola</option>
+      <option>Jimmy</option>
       <option>Jonathan</option>
       <option>Kyle</option>
       <option>JB</option>
-      <option>Evan Tyger</option>
+      <option>Evan</option>
     </select>
   </div>
   <div class="spots" id="spotsContainer">
