--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BSUC 2025 Draft Lottery</title>
   <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
@@ -124,11 +124,12 @@
     }
 
     .spots {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
-      gap: 16px;
-      max-width: 1000px;
-      margin: 30px auto;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 12px;
+      max-width: 95%;
+      margin: 20px auto 40px;
       padding: 0 20px;
     }
 
@@ -137,25 +138,33 @@
       color: var(--navy);
       font-size: 1.2rem;
       font-weight: bold;
-      padding: 16px;
-      text-align: center;
+      width: 60px;
+      height: 60px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       transition: transform 0.2s, background 0.3s;
+      cursor: pointer;
     }
 
     .spot:hover {
-      transform: scale(1.05);
+      transform: scale(1.08);
       background: #ddd;
     }
 
     .taken {
       background-color: #999 !important;
       color: white !important;
+      pointer-events: none;
     }
 
     .draft-order {
-      max-width: 600px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 12px;
+      max-width: 800px;
       margin: 40px auto;
       padding: 0 20px;
     }
@@ -163,14 +172,15 @@
     .draft-pick {
       background-color: var(--light);
       color: var(--navy);
-      padding: 14px 20px;
+      padding: 16px;
       font-size: 1.2rem;
-      border-radius: 10px;
+      border-radius: 8px;
       font-weight: bold;
-      margin-bottom: 10px;
-      display: flex;
-      justify-content: space-between;
       box-shadow: 0 3px 6px rgba(0,0,0,0.2);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
     }
   </style>
 </head>
@@ -180,19 +190,14 @@
   </header>
   <div class="subheader">Football is legacy. Crooning is life.</div>
 
-  <!-- Keep your working login, dropdown, and board code below this line -->
-
-</body>
-</html>
-
-<body>
-  <h1>BSUC 2025 Fantasy Draft Lottery</h1>
   <div class="admin-login">
     <input type="password" id="pinInput" placeholder="Enter admin PIN" />
     <button id="loginBtn" onclick="checkPIN()">Login</button>
   </div>
+
   <div class="on-the-clock">ON THE CLOCK</div>
   <div class="clock-name" id="clockName">Select a manager below</div>
+
   <div class="dropdown-container" id="dropdownContainer">
     <select id="managerDropdown" onchange="updateClockName()">
       <option disabled selected>Select manager</option>
@@ -212,6 +217,7 @@
     <button id="resetBtn" onclick="resetBoard()">Reset</button>
     <button id="removeBtn" onclick="removePickPrompt()">Remove Pick</button>
   </div>
+
   <div class="spots" id="spotsContainer">
     <div class="spot" onclick="selectSpot(this)">1</div>
     <div class="spot" onclick="selectSpot(this)">2</div>
@@ -226,6 +232,7 @@
     <div class="spot" onclick="selectSpot(this)">11</div>
     <div class="spot" onclick="selectSpot(this)">12</div>
   </div>
+
   <div class="draft-order" id="draftOrder">
     <div class="draft-pick" id="pick-1">1. </div>
     <div class="draft-pick" id="pick-2">2. </div>
@@ -240,6 +247,7 @@
     <div class="draft-pick" id="pick-11">11. </div>
     <div class="draft-pick" id="pick-12">12. </div>
   </div>
+
   <script>
     const managerOnClock = document.getElementById('clockName');
     const dropdownContainer = document.getElementById('dropdownContainer');
