--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       gap: 15px;
     }
 
-    select, button#resetBtn, button#removeBtn {
+    select, button#resetBtn, button#removeBtn, button#lockBtn {
       font-size: 1.1rem;
       padding: 12px;
       border-radius: 8px;
@@ -119,7 +119,7 @@
       cursor: pointer;
     }
 
-    select:hover, button#resetBtn:hover, button#removeBtn:hover {
+    select:hover, button#resetBtn:hover, button#removeBtn:hover, button#lockBtn:hover {
       background-color: #e5e2da;
     }
 
@@ -216,6 +216,7 @@
     </select>
     <button id="resetBtn" onclick="resetBoard()">Reset</button>
     <button id="removeBtn" onclick="removePickPrompt()">Remove Pick</button>
+    <button id="lockBtn" onclick="freezeBoard()">Lock Picks</button>
   </div>
 
   <div class="spots" id="spotsContainer">
@@ -302,6 +303,20 @@
       } else {
         alert("Invalid input. Please enter a number from 1 to 12.");
       }
+    }
+
+    function freezeBoard() {
+      spots.forEach(spot => {
+        spot.removeAttribute('onclick');
+        spot.style.cursor = 'default';
+      });
+
+      document.getElementById('managerDropdown').disabled = true;
+      document.getElementById('resetBtn').style.display = 'none';
+      document.getElementById('removeBtn').style.display = 'none';
+      document.getElementById('lockBtn').style.display = 'none';
+      document.querySelector('.on-the-clock').style.display = 'none';
+      document.getElementById('clockName').style.display = 'none';
     }
 
     function checkPIN() {
