--- a/index.html
+++ b/index.html
@@ -4,183 +4,136 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>BSUC 2025 Draft Lottery</title>
-  <link href="https://fonts.googleapis.com/css2?family=Anton&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <style>
     :root {
       --navy: #162636;
       --gold: #C79A5B;
-      --burgundy: #A22D2E;
-      --light: #F5F1EB;
-      --accent-hover: #C03A3B;
-    }
-
-    * {
-      box-sizing: border-box;
+      --white: #f5f1eb;
     }
 
     body {
+      font-family: 'Karla', sans-serif;
       background-color: var(--navy);
-      font-family: 'Roboto', sans-serif;
-      color: var(--light);
+      color: var(--white);
       margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
-    }
-
-    header {
-      width: 100%;
-      background: linear-gradient(90deg, var(--burgundy), var(--gold));
       padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      text-align: center;
     }
 
     header h1 {
-      font-family: 'Anton', sans-serif;
-      font-size: 2.8rem;
-      color: var(--light);
-      letter-spacing: 2px;
+      font-family: 'League Gothic', sans-serif;
+      font-size: clamp(2rem, 5vw, 4rem);
+      color: var(--gold);
       margin: 0;
     }
 
     .subheader {
-      font-style: italic;
-      color: #aaa;
-      margin: 10px auto 30px;
-      text-align: center;
-      font-size: 1.1rem;
-    }
-
-    .admin-login {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    .admin-login input[type="password"] {
-      font-size: 1rem;
-      padding: 10px;
-      border-radius: 8px;
-      border: none;
-      margin-right: 10px;
-    }
-
-    .admin-login button {
-      padding: 10px 18px;
-      font-size: 1rem;
-      background-color: var(--burgundy);
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      color: var(--light);
-      font-weight: bold;
-    }
-
-    .admin-login button:hover {
-      background-color: var(--accent-hover);
+      margin-bottom: 40px;
+      font-size: 1.2rem;
+      color: #ccc;
     }
 
     .on-the-clock {
-      text-align: center;
-      font-size: 1.3rem;
-      color: var(--gold);
-      text-transform: uppercase;
-      margin-top: 30px;
+      font-size: 1.4rem;
       font-weight: bold;
+      margin-bottom: 10px;
     }
 
-    #clockName {
-      text-align: center;
+    .clock-name {
       font-size: 2rem;
-      margin-bottom: 30px;
       font-weight: bold;
+      color: var(--gold);
+      margin-bottom: 30px;
     }
 
     .dropdown-container {
-      display: none;
-      justify-content: center;
-      flex-wrap: wrap;
       margin-bottom: 30px;
-      gap: 15px;
     }
 
-    select, button#resetBtn, button#removeBtn, button#lockBtn {
+    select, button {
       font-size: 1.1rem;
       padding: 12px;
       border-radius: 8px;
       border: none;
-      background-color: var(--light);
-      color: var(--navy);
+      margin: 5px;
       font-weight: bold;
+    }
+
+    select {
+      background-color: #fff;
+      color: #000;
+    }
+
+    button {
+      background-color: var(--gold);
+      color: var(--navy);
       cursor: pointer;
     }
 
-    select:hover, button#resetBtn:hover, button#removeBtn:hover, button#lockBtn:hover {
-      background-color: #e5e2da;
+    button:hover {
+      background-color: #b48a4f;
     }
 
     .spots {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 12px;
-      max-width: 95%;
-      margin: 20px auto 40px;
-      padding: 0 20px;
+      margin-bottom: 40px;
     }
 
     .spot {
-      background: rgba(245, 241, 235, 0.95);
-      color: var(--navy);
-      font-size: 1.2rem;
-      font-weight: bold;
-      width: 60px;
-      height: 60px;
+      background-color: #ffffff22;
+      border: 2px solid var(--gold);
+      padding: 15px;
+      margin: 10px;
+      border-radius: 50%;
+      width: 50px;
+      height: 50px;
+      font-size: 1.3rem;
       display: flex;
       align-items: center;
       justify-content: center;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
-      transition: transform 0.2s, background 0.3s;
       cursor: pointer;
     }
 
-    .spot:hover {
-      transform: scale(1.08);
-      background: #ddd;
-    }
-
-    .taken {
-      background-color: #999 !important;
-      color: white !important;
-      pointer-events: none;
+    .spot.taken {
+      background-color: var(--gold);
+      color: var(--navy);
+      border: none;
+      cursor: default;
     }
 
     .draft-order {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 12px;
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 0 20px;
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: left;
     }
 
     .draft-pick {
-      background-color: var(--light);
-      color: var(--navy);
-      padding: 16px;
-      font-size: 1.2rem;
-      border-radius: 8px;
-      font-weight: bold;
-      box-shadow: 0 3px 6px rgba(0,0,0,0.2);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
+      font-size: 1.3rem;
+      border-bottom: 1px solid #ccc;
+      padding: 10px;
+    }
+
+    @media (max-width: 600px) {
+      .spots {
+        gap: 8px;
+      }
+
+      .spot {
+        margin: 5px;
+        width: 40px;
+        height: 40px;
+        font-size: 1rem;
+      }
+
+      .clock-name {
+        font-size: 1.5rem;
+      }
+
+      .draft-order {
+        font-size: 1rem;
+      }
     }
   </style>
 </head>
@@ -189,11 +142,6 @@
     <h1>BSUC 2025 Draft Lottery</h1>
   </header>
   <div class="subheader">Football is legacy. Crooning is life.</div>
-
-  <div class="admin-login">
-    <input type="password" id="pinInput" placeholder="Enter admin PIN" />
-    <button id="loginBtn" onclick="checkPIN()">Login</button>
-  </div>
 
   <div class="on-the-clock">ON THE CLOCK</div>
   <div class="clock-name" id="clockName">Select a manager below</div>
@@ -214,9 +162,9 @@
       <option>Kyle</option>
       <option>Seth</option>
     </select>
-    <button id="resetBtn" onclick="resetBoard()">Reset</button>
-    <button id="removeBtn" onclick="removePickPrompt()">Remove Pick</button>
-    <button id="lockBtn" onclick="freezeBoard()">Lock Picks</button>
+    <button onclick="resetBoard()">Reset</button>
+    <button onclick="removePickPrompt()">Remove Pick</button>
+    <button onclick="lockDraft()">Lock Picks</button>
   </div>
 
   <div class="spots" id="spotsContainer">
@@ -251,18 +199,15 @@
 
   <script>
     const managerOnClock = document.getElementById('clockName');
-    const dropdownContainer = document.getElementById('dropdownContainer');
     const spots = document.querySelectorAll('.spot');
-    let adminUnlocked = false;
 
     function updateClockName() {
       const dropdown = document.getElementById('managerDropdown');
-      const selectedName = dropdown.value;
-      managerOnClock.textContent = selectedName;
+      managerOnClock.textContent = dropdown.value;
     }
 
     function selectSpot(el) {
-      if (el.classList.contains('taken') || !adminUnlocked) return;
+      if (el.classList.contains('taken')) return;
       const spot = el.textContent;
       const managerName = managerOnClock.textContent;
       if (managerName === 'Select a manager below') return;
@@ -305,32 +250,11 @@
       }
     }
 
-    function freezeBoard() {
+    function lockDraft() {
+      document.querySelectorAll('select, button').forEach(el => el.disabled = true);
       spots.forEach(spot => {
-        spot.removeAttribute('onclick');
-        spot.style.cursor = 'default';
+        spot.style.pointerEvents = 'none';
       });
-
-      document.getElementById('managerDropdown').disabled = true;
-      document.getElementById('resetBtn').style.display = 'none';
-      document.getElementById('removeBtn').style.display = 'none';
-      document.getElementById('lockBtn').style.display = 'none';
-      document.querySelector('.on-the-clock').style.display = 'none';
-      document.getElementById('clockName').style.display = 'none';
-    }
-
-    function checkPIN() {
-      const inputPIN = document.getElementById('pinInput').value;
-      if (inputPIN === '4732') {
-        adminUnlocked = true;
-        dropdownContainer.style.display = 'flex';
-        spots.forEach(spot => {
-          spot.style.pointerEvents = 'auto';
-        });
-        document.querySelector('.admin-login').style.display = 'none';
-      } else {
-        alert('Incorrect PIN. Try again.');
-      }
     }
   </script>
 </body>
