--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       --burgundy: #A22D2E;
       --light: #F5F1EB;
       --accent-hover: #C03A3B;
+      --danger: #FF3B3B;
     }
 
     * {
@@ -61,15 +62,53 @@
       font-size: 1.3rem;
       color: var(--gold);
       text-transform: uppercase;
-      margin-top: 30px;
+      margin-top: 20px;
       font-weight: bold;
     }
 
-    #clockName {
+    .clock-name {
       text-align: center;
       font-size: 2rem;
-      margin-bottom: 30px;
+      margin-top: 10px;
       font-weight: bold;
+    }
+
+    .timer-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-top: 15px;
+    }
+
+    #timer {
+      font-size: 2.2rem;
+      color: var(--light);
+      font-weight: bold;
+      background-color: transparent;
+      padding: 10px 20px;
+      border-radius: 8px;
+      transition: background-color 0.4s;
+    }
+
+    .timer-controls {
+      margin-top: 10px;
+    }
+
+    .timer-controls button {
+      font-size: 1rem;
+      padding: 8px 14px;
+      margin: 0 5px;
+      border-radius: 6px;
+      border: none;
+      background-color: var(--gold);
+      color: var(--navy);
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .timer-controls button:hover {
+      background-color: var(--accent-hover);
+      color: var(--light);
     }
 
     .dropdown-container {
@@ -89,10 +128,6 @@
       color: var(--navy);
       font-weight: bold;
       cursor: pointer;
-    }
-
-    select:hover, button#resetBtn:hover, button#removeBtn:hover {
-      background-color: #e5e2da;
     }
 
     .spots {
@@ -155,24 +190,9 @@
       text-align: center;
     }
 
-    #timerSection {
-      text-align: center;
-      margin: 30px 0;
-    }
-
-    #timerDisplay {
-      font-size: 2.5rem;
-      font-weight: bold;
-      margin-bottom: 10px;
-    }
-
     .flashing {
-      animation: flash 1s infinite;
-    }
-
-    @keyframes flash {
-      0%, 100% { color: red; }
-      50% { color: white; }
+      background-color: var(--danger) !important;
+      color: white !important;
     }
   </style>
 </head>
@@ -184,6 +204,15 @@
 
   <div class="on-the-clock">ON THE CLOCK</div>
   <div class="clock-name" id="clockName">Select a manager below</div>
+
+  <div class="timer-container">
+    <div id="timer">10:00</div>
+    <div class="timer-controls">
+      <button onclick="startTimer()">Start</button>
+      <button onclick="stopTimer()">Stop</button>
+      <button onclick="resetTimer()">Reset</button>
+    </div>
+  </div>
 
   <div class="dropdown-container" id="dropdownContainer">
     <select id="managerDropdown" onchange="updateClockName()">
@@ -206,46 +235,23 @@
   </div>
 
   <div class="spots" id="spotsContainer">
-    <div class="spot" onclick="selectSpot(this)">1</div>
-    <div class="spot" onclick="selectSpot(this)">2</div>
-    <div class="spot" onclick="selectSpot(this)">3</div>
-    <div class="spot" onclick="selectSpot(this)">4</div>
-    <div class="spot" onclick="selectSpot(this)">5</div>
-    <div class="spot" onclick="selectSpot(this)">6</div>
-    <div class="spot" onclick="selectSpot(this)">7</div>
-    <div class="spot" onclick="selectSpot(this)">8</div>
-    <div class="spot" onclick="selectSpot(this)">9</div>
-    <div class="spot" onclick="selectSpot(this)">10</div>
-    <div class="spot" onclick="selectSpot(this)">11</div>
-    <div class="spot" onclick="selectSpot(this)">12</div>
+    <!-- Spots 1–12 -->
+    ${[...Array(12).keys()].map(i => `<div class="spot" onclick="selectSpot(this)">${i + 1}</div>`).join('')}
   </div>
 
   <div class="draft-order" id="draftOrder">
-    <div class="draft-pick" id="pick-1">1. </div>
-    <div class="draft-pick" id="pick-2">2. </div>
-    <div class="draft-pick" id="pick-3">3. </div>
-    <div class="draft-pick" id="pick-4">4. </div>
-    <div class="draft-pick" id="pick-5">5. </div>
-    <div class="draft-pick" id="pick-6">6. </div>
-    <div class="draft-pick" id="pick-7">7. </div>
-    <div class="draft-pick" id="pick-8">8. </div>
-    <div class="draft-pick" id="pick-9">9. </div>
-    <div class="draft-pick" id="pick-10">10. </div>
-    <div class="draft-pick" id="pick-11">11. </div>
-    <div class="draft-pick" id="pick-12">12. </div>
+    ${[...Array(12).keys()].map(i => `<div class="draft-pick" id="pick-${i + 1}">${i + 1}. </div>`).join('')}
   </div>
 
-  <div id="timerSection">
-    <div id="timerDisplay">60</div>
-    <button onclick="startTimer()">Start</button>
-    <button onclick="stopTimer()">Stop</button>
-    <button onclick="resetTimer()">Reset</button>
-    <audio id="buzzer" src="https://actions.google.com/sounds/v1/alarms/alarm_clock.ogg"></audio>
-  </div>
+  <audio id="alarmSound" src="https://www.soundjay.com/button/beep-07.wav" preload="auto"></audio>
 
   <script>
     const managerOnClock = document.getElementById('clockName');
     const spots = document.querySelectorAll('.spot');
+    const timerDisplay = document.getElementById('timer');
+    const alarm = document.getElementById('alarmSound');
+    let timer;
+    let totalSeconds = 600;
 
     function updateClockName() {
       const dropdown = document.getElementById('managerDropdown');
@@ -277,6 +283,7 @@
       }
       managerOnClock.textContent = 'Select a manager below';
       document.getElementById('managerDropdown').selectedIndex = 0;
+      resetTimer();
     }
 
     function removePickPrompt() {
@@ -297,30 +304,17 @@
       }
     }
 
-    let timer;
-    let timeLeft = 60;
-    const display = document.getElementById("timerDisplay");
-    const buzzer = document.getElementById("buzzer");
-
-    function updateDisplay() {
-      display.textContent = timeLeft;
-      if (timeLeft <= 10 && timeLeft > 0) {
-        display.classList.add("flashing");
-      } else {
-        display.classList.remove("flashing");
-      }
-    }
-
     function startTimer() {
       clearInterval(timer);
       timer = setInterval(() => {
-        timeLeft--;
-        updateDisplay();
-        if (timeLeft === 0) {
+        if (totalSeconds <= 0) {
           clearInterval(timer);
-          buzzer.play();
-          display.classList.remove("flashing");
+          alarm.play();
+          timerDisplay.classList.add("flashing");
+          return;
         }
+        totalSeconds--;
+        updateTimerDisplay();
       }, 1000);
     }
 
@@ -330,9 +324,21 @@
 
     function resetTimer() {
       clearInterval(timer);
-      timeLeft = 60;
-      updateDisplay();
-      display.classList.remove("flashing");
+      totalSeconds = 600;
+      updateTimerDisplay();
+      timerDisplay.classList.remove("flashing");
+    }
+
+    function updateTimerDisplay() {
+      const minutes = String(Math.floor(totalSeconds / 60)).padStart(2, '0');
+      const seconds = String(totalSeconds % 60).padStart(2, '0');
+      timerDisplay.textContent = `${minutes}:${seconds}`;
+
+      if (totalSeconds <= 30) {
+        timerDisplay.classList.add("flashing");
+      } else {
+        timerDisplay.classList.remove("flashing");
+      }
     }
   </script>
 </body>
